# chess-engine

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.adoc  README.md  environment.yml  pyproject.toml  pytho_test.py  render_outputs.py.patch  requirements.txt
ci/docker/ubuntu/: Dockerfile
data/gaviota/: README.md
data/polyglot/: README.md
data/stockfish_14.1_linux_x64/: README.de
log/: .gitignore
src/: _config.yml  _toc.yml  index.md  kasparow.ipynb  references.bib  style.css
src/sections/: MinMaxTree.py  Readme.md  s01_introduction.ipynb  s02_project_setup.ipynb  s03_introduction_python_chess.ipynb  s04_engine_interface.ipynb  s04_engine_setup.ipynb  s05_ai_engine.ipynb  s05_random_engine.ipynb  s06_enhanced_ai_engine.ipynb  s06_play.ipynb  s07_human_engine.ipynb  s08_evaluation.ipynb  s09_minimax_engine.ipynb  s0X_opening.ipynb  s0X_playground.ipynb  s0X_stockfish.ipynb  s10_alpha_beta_engine.ipynb  s11_iterative_deepening.ipynb  s12_simplified_evaluation.ipynb  s13_quiescence_search.ipynb  s14_prototype_v1.ipynb  s15_performance.ipynb  s16_enhanced_algorithms.ipynb  s17_outlook.ipynb  s17_prototype_v2.ipynb  s18_outlook.ipynb  s18_results.ipynb
src/sections/converted_notebooks/: .gitignore
src/sections/old_notebooks/: s0X_playground.ipynb  s0X_relative_engine.ipynb  s15_ai_engine.ipynb  s16_enhanced_ai_engine.ipynb  s17_performance.ipynb
src/sections/results/: s09_MiniMaxEngine.json  s11_IterativeAlphaBetaCached.json  s12_IncrementalIterativeAlphaBetaCached.json  s13_QuiescenceEngine.json  s14_PrototypeV1Engine.json  s17_PrototypeV2Engine.json  s17_PrototypeV2Engine_see.json  s99_1400_stockfish.json  s99_1600_stockfish.json  s99_1800_stockfish.json  s99_bad_stockfish.json  s99_stockfish.json
src/sections/results/matches/: MoveOrderingEngine_4_vs_StockfishEngine_limit_1400.json  stockfish1_vs_stockfish2.json  (+21 more)
src/sections/utils/: get_gaviota.py  jupyer_loader.py  jupyter_loader.py  min_max_tree.py
