[tool.poetry]
name = "chess-engine"
version = "0.1.0"
description = ""
authors = ["Jens Heinrich <gitlab.com/JensHeinrich>", "Leon De Andrade <gitlab.com/leon0402>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
chess = "^1.7.0"

[tool.poetry.dev-dependencies]
yapf = "^0.31.0"
pylint = "^2.11.1"
ipykernel = "^6.4.1"
nbconvert = "^6.2.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.yapf]
JOIN_MULTIPLE_LINES = false
EACH_DICT_ENTRY_ON_SEPARATE_LINE = true
FORCE_MULTILINE_DICT = true
SPLIT_ALL_TOP_LEVEL_COMMA_SEPARATED_VALUES = true
SPLIT_COMPLEX_COMPREHENSION = true
SPLIT_BEFORE_DICT_SET_GENERATOR = true
DEDENT_CLOSING_BRACKETS = true
COALESCE_BRACKETS = true
INDENT_DICTIONARY_VALUE = true
ALLOW_SPLIT_BEFORE_DICT_VALUE = false
